# advent-of-code

./: Cargo.toml  README.md
.github/workflows/: rust.yml
2022/day-01/: Cargo.toml  README.md
2022/day-01/benches/: bench_y2022day01.rs
2022/day-01/src/: lib.rs
2022/day-02/: Cargo.toml  README.md
2022/day-02/benches/: bench_y2022day02.rs
2022/day-02/src/: lib.rs
2022/day-03/: Cargo.toml  README.md
2022/day-03/benches/: bench_y2022day03.rs
2022/day-03/src/: by3.rs  lib.rs
2022/day-04/: Cargo.toml  README.md
2022/day-04/benches/: bench_y2022day04.rs
2022/day-04/src/: lib.rs
2022/rust/day-01/src/: lib.rs
2022/rust/day-02/: Cargo.toml
2022/rust/day-02/src/: lib.rs
